# safe-wave

./: .gitignore  DATABASE_RESTRUCTURING_SUMMARY.md  DATABASE_USAGE_EXAMPLES.md  DOCKER_MANAGEMENT_README.md  NETWORK_SETUP.md  NETWORK_SETUP_SUMMARY.md  PROJECT_DETAIL.md  README.md  TURBOREPO_TRANSFORMATION.md  babel.config.js  package-lock.json  package.json  prettier.config.js  test_document.txt  test_upload.html  turbo.json
.turbo/daemon/: 7e51bbc3882590ac-turbo.log.2025-09-02
app/native/: .prettierignore  .prettierrc.json  AUDIO_ANALYSIS_IMPLEMENTATION.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  package-lock.json  package.json
app/native/app/: _layout.tsx  about.tsx  api-test.tsx  auth-test.tsx  help-faq.tsx  medical-documents.tsx  onboarding-questionnaire.tsx  privacy-security.tsx  send-feedback.tsx
app/native/app/(tabs)/: _layout.tsx  analytics.tsx  checkin.tsx  index.tsx  profile.tsx
app/native/app/auth/: login.tsx  signup.tsx
app/native/components/: AudioAnalysisResults.tsx  AudioRecorder.tsx  AuthTest.tsx  Collapsible.tsx  NetworkStatus.tsx  NetworkTest.tsx  OnboardingAnalysisTest.tsx  OnboardingQuestionnaire.tsx  ParallaxScrollView.tsx  ThemedText.tsx  ThemedView.tsx  TokenStorageTest.tsx
app/native/components/ui/: IconSymbol.tsx  ModernInput.tsx  TabBarBackground.ios.tsx
app/native/constants/: Colors.ts
app/native/contexts/: UserContext.tsx
app/native/hooks/: useColorScheme.web.ts  useColorSchemeSafe.ts  useDocumentWebSocket.ts  useSafeAreaInsetsSafe.ts  useThemeColor.ts
app/native/scripts/: reset-project.js  update-ip.js
app/native/services/: api.ts  config.ts
app/native/utils/: platform.ts
apps/backend/: SMTP_SETUP_GUIDE.md  alembic.ini  check_audio_records.py  get_network_ip.py  init_db_and_test.py  main.py  package.json  requirements.txt  setup_env.py  start-network.py  test_analytics_data.py  test_analytics_query.py  test_auth_flow.py  test_onboarding_analysis.py  test_openrouter.py
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 001_initial.py  528efae650e6_add_audio_duration_field.py
apps/backend/app/controllers/: user_controller.py
apps/backend/app/core/: config.py  database.py
apps/backend/app/exceptions/: __init__.py  base.py
apps/backend/app/models/: audio.py  audio_analysis.py  base.py  content.py  document.py  token.py  user.py
apps/backend/scripts/: seed_content.py  setup_env.py
apps/frontend/: .eslintrc.js  PERFORMANCE_OPTIMIZATIONS.md  app.json  metro.config.js  package.json  tsconfig.json
apps/frontend/app/: _layout.tsx  api-test.tsx  index.tsx
apps/frontend/components/: ApiConnectionTest.tsx  AudioAnalysisResults.tsx  AudioRecorder.tsx  AuthTest.tsx  NetworkTest.tsx  OnboardingAnalysisTest.tsx  OnboardingQuestionnaire.tsx  ThemedText.tsx  TokenStorageTest.tsx
apps/frontend/constants/: Colors.ts
apps/frontend/contexts/: AuthContext.tsx  UserContext.tsx
apps/frontend/scripts/: update-ip.js
apps/frontend/services/: api-client.ts  config.ts
apps/frontend/utils/: error-handler.ts
docs/diagrams/: usecase.puml
scripts/: get-local-ip.js
service/backend/: main.py  pyproject.toml  requirements.txt
service/be/: config.py  main.py  requirements-dev.txt  requirements.txt
services/backend/: .dockerignore  .env  .env.example  .flake8  =1.58.1  CONFIG.md  Dockerfile  IMPLEMENTATION.md  README.md  REFRESH_TOKEN_GUIDE.md  SEEDING_SCHEMA_UPDATE.md  SMTP_SETUP_GUIDE.md  alembic.ini  check_audio_records.py  create_database.py  create_tables.py  dev_smtp_server.py  docker-compose.yml  drop_tables.py  env.example  init_alembic.py  main.py  mypy.ini  package.json  pyproject.toml  requirements.txt  run.py  setup_database.py  setup_everything.py  start_backend.py  test_api.py  test_audio_system.py  test_database_restructure.py  test_db.py  test_email.py  test_email_ishan.py  test_endpoints.py  test_immediate_alert.py  test_imports.py  test_onboarding_analysis.py
services/backend/alembic/: env.py
services/backend/alembic/versions/: 001_initial_database_structure.py  002_add_audio_analysis.py  002_content_management_system.py  003_add_documents.py  003_add_video_url_to_articles.py  004_add_author_bio_and_updated_at_to_articles.py  005_add_performance_indexes.py  528efae650e6_add_audio_duration_field.py  d15449e09f81_add_content_models.py
services/backend/alembic/versions_backup/: 001_initial.py
services/backend/app/: __init__.py
services/backend/app/controllers/: audio_controller.py  document_controller.py  user_controller.py
services/backend/app/core/: config.py  database.py
services/backend/app/models/: __init__.py  audio.py  audio_analysis.py  content.py  document.py  email_alert.py  token.py  user.py
services/backend/app/schemas/: __init__.py  audio.py  document.py  email_alert.py  user.py
services/backend/app/services/: email_alert_service.py  minio_service.py  onboarding_analysis_service.py  openrouter_service.py  token_service.py  vosk_transcription_service.py
services/backend/app/utils/: __init__.py  auth.py  email_service.py  token_cleanup.py
services/backend/app/views/: __init__.py  analytics.py  audio.py  auth.py  content.py  documents.py  email_alerts.py  health.py  uploads.py  users.py
services/backend/docs/: DATABASE_MANAGEMENT.md
services/backend/scripts/: DOCKER_MANAGEMENT.md  README.md  deploy.ps1  docker_manager.py  download_vosk_model.py  fix_alembic.py  kill_port.bat  kill_port.ps1  kill_port.py  kill_port.sh  manage.py  migration.py  recreate_migrations.py  seed_content.py  seed_content.sql  seed_data.py  setup.bat  setup.py  setup.sh  setup_env.bat  setup_env.ps1  setup_env.py  setup_env.sh  update_network_ip.py
services/backend/tests/: conftest.py  run_tests.py  test_audio.py  test_auth.py  test_content.py  test_documents.py  test_users.py
services/backend/uploads/documents/: 04e48895-fe36-422e-951d-fe02774d3f60_test_doc.txt  28a04692-a92d-48fc-a35c-4241eedfd47a_test_ok.txt  639e627b-cf09-45ec-9e57-9e1fcddb5f39_test_onboarding.txt  93e755b9-3429-4578-b58a-24a16ee17c8d_test.txt  cc3c69f1-9490-4a59-bc07-8f56d1c0eaa7_test_upload.txt
(+36 files in other folders)
